<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="addagent">添加机构</string>
    <string name="agent_category">机构分类</string>
    <string name="agent_tab">机构标签</string>
    <string name="agent_type">机构类型</string>
    <string name="all">全部</string>
    <string name="app_name">课外班</string>
    <string name="chain_agent">连锁机构</string>
    <string name="change_city">切换城市</string>
    <string name="click_add">点击添加</string>
    <string name="click_check_all">点击查看全部</string>
    <string name="common_agent">普通机构</string>
    <string name="current_location">当前位置</string>
    <string name="filter">筛选</string>
    <string name="locating">正在定位所在位置..</string>
    <string name="no_result">没有找到</string>
    <string name="please_input_city_name">请输入城市名称</string>
    <string name="relocate">重新定位</string>
    <string name="total_count">全部数量</string>
    <string name="youeryuan">幼儿园</string>
    <string name="zaojiao">早教</string>
    <string name="news">资讯</string>
    <string name="lessons">课程</string>
    <string name="schools">学校</string>
    <string name="self">我</string>
    <string name="agent">机构</string>
    <string-array name="category">
        <item>幼升小</item>
        <item>小升初</item>
        <item>中考</item>
        <item>高考</item>
        <item>考研</item>
    </string-array>
    <string name="empty">空空如也</string>
</resources>