<android.support.v4.app.FragmentTabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <SearchView
                android:id="@+id/sv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical" />
        </LinearLayout>
        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />
        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/header_more_list"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/rb_news"
                style="@style/MainTab"
                android:drawableTop="@drawable/icon_1_n"
                android:text="@string/news" />
            <RadioButton
                android:id="@+id/rb_lessons"
                style="@style/MainTab"
                android:drawableTop="@drawable/icon_0_n"
                android:text="@string/lessons" />
            <RadioButton
                android:id="@+id/rb_agent"
                style="@style/MainTab"
                android:drawableTop="@drawable/icon_2_n"
                android:text="@string/agent" />
            <RadioButton
                android:id="@+id/rb_schools"
                style="@style/MainTab"
                android:drawableTop="@drawable/icon_3_n"
                android:text="@string/schools" />
            <RadioButton
                android:id="@+id/rb_self"
                style="@style/MainTab"
                android:drawableTop="@drawable/icon_4_n"
                android:text="@string/self" />
        </RadioGroup>
    </LinearLayout>
</android.support.v4.app.FragmentTabHost>