<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >
            <ImageButton
                android:id="@+id/addagent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/addagent"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/addagent" />
            <SearchView
                android:id="@+id/searchview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/addagent"
                android:layout_toStartOf="@+id/addagent"
                android:clipToPadding="true"
                android:iconifiedByDefault="false" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            <Button
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="2dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/filter" />
            <Button
                android:id="@+id/relocate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="2dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/relocate" />
            <TextView
                android:id="@+id/location"
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/relocate"
                android:layout_toStartOf="@+id/relocate"
                android:text="@string/relocate" />
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/location"
                android:layout_toStartOf="@+id/location"
                android:text="@string/current_location" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:visibility="gone" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/agent_category" />
                <RadioGroup
                    android:id="@+id/category_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checkedButton="@+id/category_all"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:id="@+id/category_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all" />
                    <RadioButton
                        android:id="@+id/category_youeryuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/youeryuan" />
                    <RadioButton
                        android:id="@+id/category_zaojiao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zaojiao" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:visibility="gone" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agent_type" />
                <GridView
                    android:id="@+id/type_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:horizontalSpacing="10dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tab_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:visibility="gone" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agent_tab" />
                <GridView
                    android:id="@+id/tab_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:horizontalSpacing="10dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp" />
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/search_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_result"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/search_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/click_add"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/loading_layout"
        android:visibility="gone" />
</FrameLayout>